--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,10 @@
   <artifactId>MySWEBasicJPADemoApp</artifactId>
   <version>1</version>
   <name>MySWEBasicJPADemoApp</name>
-  <description>MySWEBasicJPADemoApp</description> 
+  <description>MySWEBasicJPADemoApp</description>
+    <properties>
+        <hibernate.version>5.2.2.Final</hibernate.version>
+    </properties>
   <dependencies>
 	<dependency>
 		<groupId>org.eclipse.persistence</groupId>
@@ -18,6 +21,33 @@
 		<version>10.12.1.1</version>
 		<scope>runtime</scope>
 	</dependency>
+
+
+
+      <dependency>
+          <groupId>org.hibernate</groupId>
+          <artifactId>hibernate-entitymanager</artifactId>
+          <version>${hibernate.version}</version>
+      </dependency>
+
+      <!-- https://mvnrepository.com/artifact/org.xerial/sqlite-jdbc -->
+      <dependency>
+          <groupId>org.xerial</groupId>
+          <artifactId>sqlite-jdbc</artifactId>
+          <version>3.23.1</version>
+      </dependency>
+
+      <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
+      <dependency>
+          <groupId>mysql</groupId>
+          <artifactId>mysql-connector-java</artifactId>
+          <version>6.0.3</version>
+      </dependency>
+
+
+
+
+
   </dependencies>
   <build>
     <sourceDirectory>src</sourceDirectory>
